--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "@angular/router": "6.0.7",
     "@angular/service-worker": "6.0.7",
     "core-js": "2.5.7",
+    "hammerjs": "2.0.8",
+    "moment": "2.22.2",
     "rxjs": "6.2.1",
     "zone.js": "0.8.26"
   },
